manifests/ns-ingress-controller/nginx-ingress/resources/ingress-vault.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-vault
subsets:
  - addresses:
      - ip: 10.0.30.10
    ports:
      - port: 8200
---
apiVersion: v1
kind: Service
metadata:
  name: external-vault
spec:
  ports:
    - port: 443
      targetPort: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-vault
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: vlt.vrsf.in
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: external-vault
                port:
                  number: 443
  tls:
    - hosts:
        - vlt.vrsf.in
      secretName: external-vault-tls
